client/src/App.css
.bordered {
    border: 1px solid black;
    border-radius: 5px;
}

.app {
    margin-top: 0 !important;
    height: 950px;
}

.interaction-pane {
    height: 870px;
}

.margin-base {
    margin: 10px 10px 0;
}

.input-pane {
    height: 780px;
}

.editor-pane {
    height: 870px;
}

.create-form {
    padding: 5px;
    display: flex;
    flex-direction: column;
}

.create-group {
    display: flex;
    flex-wrap: wrap;
}

.create-required-input, .create-required-select, .create-props-input, .create-props-select {
    width: 90%;
}

.create-input {
    padding: 5px 0;
}

.status {
    width: 40%;
}

.hidden {
    visibility: hidden;
}

